# scasagrande.github.io-src

./: .gitignore  .gitmodules  CNAME  Makefile  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
content/blog/: article-01-compile_caterina_bootloader.md  article-02-coverage_isnt_everything.rst  article-03-building_docker_multiple_base_image_tags.rst  article-04-remember_to_docker_pull.rst  article-05-travis_and_if_statements.rst  article-06-python_requests_and_ssl.rst  article-07-my_security_checklist.rst
content/blog/2024/: sysroot-package-generation.rst
content/pages/: cv.rst  hardware.rst  media.rst  projects.rst  resume.md  software.rst
